fix flicker on keywords when loading

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -340,6 +340,7 @@ html#ov {
           }
 
           #Keywords {
+            flex-grow: 1;
 
             .keywordsInner {
               display: flex;
